k8s/nextjs-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: "nextjs-app"
  name: "nextjs-app"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: "nextjs-app"
  sessionAffinity: None
  type: NodePort
